# ur5e_pick_place

./: .gitignore  CITATION.cff  CONTRIBUTION.md  LICENSE  README.md
ros2_robotiq_gripper/robotiq_description/: CMakeLists.txt
ros2_robotiq_gripper/robotiq_description/urdf/: robotiq_2f_85_macro.urdf.xacro
ur5e_golf_pick_place/: CMakeLists.txt  package.xml  setup.py
ur5e_golf_pick_place/config/: ur5e_gripper_controllers.yaml
ur5e_golf_pick_place/launch/: spawn_ur5_robotiq.launch.py  ur5e_robotiq_moveit.launch.py
ur5e_golf_pick_place/ur5e_golf_pick_place/pick_place_exercise/: README.md  vision_based_pick_and_place.py
ur5e_golf_pick_place/urdf/: camera.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro  ur5e.ros2_control.xacro  ur5e_robotiq85.urdf.xacro
ur5e_golf_pick_place/worlds/: golf_workspace.world
ur5e_gripper_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
